--- a/problem-sets/ps5/Uebungsblatt_5.Rmd
+++ b/problem-sets/ps5/Uebungsblatt_5.Rmd
@@ -1,7 +1,7 @@
 
 ```{r 'check_ps', include=FALSE}
 
-user.name = 'ENTER A USER NAME HERE'
+user.name = 'IdilAzak'
 ```
 
 # RTutor Uebungsblatt 5 - Projektkurs
@@ -52,11 +52,8 @@ Fuer eine Erklaerung der Variablen geben Sie einfach `help(wage1)` in der R Kons
 b) Wir moechten nun durch eine lineare Regression den Zusammenhang zwischen Stundenlohn in Dollar (wage) als abhaengige Variable und Ausbildungszeit in Jahren (educ) als erklaerende Variable beschreiben. Fuehren Sie die entsprechende Regression durch, speichern das Ergebnis als `reg1` und zeigen Sie ein `summary` von `reg1`.
 
 ```{r "1_b",optional=TRUE}
-
-# enter your code here ...
-
-
-# enter your code here ...
+reg1 <- lm(wage ~ educ, data = wage1)
+summary(reg1)
 
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
@@ -67,9 +64,7 @@ c) Nun ein kleines Quiz. Ist folgende Interpretation des Regressionsergebnisses 
 
 Schreiben Sie "ja" oder "nein"
 ```{r "1_c",optional=TRUE}
-
-# enter your code here ...
-
+"nein"
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -89,12 +84,9 @@ Vervollstaendigen Sie den Code and der Stelle ___, um die durchschnittlichen Aus
 
 ```{r "1_e",optional=TRUE}
 wage1 %>%
- mutate(gender = ifelse(female==1,"___","___")) %>%
+ mutate(gender = ifelse(female==1,"Frauen","Männer")) %>%
  group_by(gender) %>%
- summarize(mean(___))
-
-# enter your code here ...
-
+ summarize(mean(gender))
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -125,8 +117,7 @@ Wenn wir y auf nur eine Variable x regressieren, misst der geschaetzte Koeffizie
  
 Tippen Sie 1 oder 2 ein:
 ```{r "1_e_3",optional=TRUE}
-
-# enter your code here ...
+1
 
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
@@ -163,9 +154,7 @@ Wir haben eine Variable `w` die nur `y` aber nicht `x` beeinflusst. Es soll kein
 Nehmen Sie an, wir regressieren y auf x ohne fuer w zu kontrollieren, d.h `lm(y~x)`. Ist der geschaetzte Koeffizient von `x` ein verzerrter oder unverzerrter Schaetzer des kausalen Effektes von `x` auf `y`? Geben Sie "verzerrt" oder "unverzerrt" ein:
 
 ```{r "1_g_2",optional=TRUE}
-
-# enter your code here ...
-
+"unverzerrt"
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -222,9 +211,7 @@ Wenn wir w als Kontrollvariable einbauen, ist der Koeffizient von x weiterhin se
 
 Frage: Liegt in der zweiten Regression der wahre kausale Effekt `beta1=2` im 95% Konfidenzintervall um unseren Schaetzer des Koeffizienten von x? Schreiben Sie "ja" oder "nein"
 ```{r "1_g_5"}
-
-# enter your code here ...
-
+"nein"
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -235,8 +222,7 @@ confint(lm(y~x))
 Berechnen Sie auch das 99% Konfidenzintervall:
 ```{r "1_g_7"}
 
-# enter your code here ...
-
+confint(lm(y~x), level = 0.99)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -287,8 +273,7 @@ coef(lm(wage~educ, data=wage1))
 In welche Richtung veraendert sich vermutlich der geschaetzte Koeffizient von `educ` wenn wir Arbeitserfahrung `exper` mit in die Regression hineinnehmen? Schreiben Sie "groesser" oder "kleiner":
 
 ```{r "1_h_5",optional=TRUE}
-
-# enter your code here ...
+"groesser"
 
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
@@ -312,8 +297,7 @@ Aber was ist jetzt der "wahre" kausale Effekt von Ausbildungsjahren auf Stundenl
 
 Geben Sie 0.54 oder 0.64 an.
 ```{r "1_h_7"}
-
-# enter your code here ...
+0.54
 
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
@@ -330,7 +314,7 @@ Fuegen Sie zu dem Code unten noch eine dritte Regression hinzu, in der Sie sowoh
 reg1 <- lm(wage ~ educ, data = wage1)
 reg2 <- lm(wage ~ educ + female + nonwhite, data=wage1)
 
-# enter your code here ...
+reg3 <- lm(wage ~ educ + female + nonwhite + exper, data=wage1)
 
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
@@ -363,9 +347,9 @@ Wie die Variable `female` im vorherigen Beispiel sind auch hier wieder einige Va
 Als kleine Voruebung, speichern Sie in der Variablen `n_train` die Zahl der Arbeitslosen im Datensatz, die an einer Weiterbildung teilgenommen haben und zeigen Sie `n_train`.
 
 ```{r "2_a_2"}
+n_train <- sum(jtrain3$train)
 
-# enter your code here ...
-
+n_train
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -378,9 +362,7 @@ Welches Vorzeichen sollte der kausale Effekt von Weiterbildungangebot `train` au
 Geben Sie hier die Ziffer Ihrer Antwort ein und fuehren Sie die Codezeile aus:
 
 ```{r "2_a_3"}
-
-# enter your code here ...
-
+2
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -390,12 +372,8 @@ Wir wuerden schon hoffen, dass eine Weiterbildungsmassnahme die Wahrscheinlichke
 b) Fuehren Sie eine lineare Regression (mittels OLS) mit x=`train` und y=`unem78` (Arbeitslosigkeit im Jahr 1978) durch. Speichern sie diese als `reg1` und zeigen Sie einen `summary` davon.
 
 ```{r "2_b"}
-
-# enter your code here ...
-
-
-# enter your code here ...
-
+reg1 <- lm(unem78 ~ train, data=jtrain3)
+summary(reg1)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -405,12 +383,9 @@ Bedeutet dies, dass mehr Weiterbildung zu mehr Arbeitslosigkeit fuehrt?
 
 c) Ergaenzen Sie folgenden Code um die durchschnittliche Teilnahme an Weiterbildungsprogrammen 1977 und die Arbeitslosenquote 1978 zwischen den Personen zu vergleichen, die 1975 arbeitslos/nicht arbeitslos waren.
 ```{r "2_c"}
-___ %>% 
- group_by(___) %>%
- summarize(mean(train), mean(___))
-
-# enter your code here ...
-
+jtrain3 %>% 
+ group_by(unem75) %>%
+ summarize(mean(train), mean(unem78))
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -443,18 +418,15 @@ Wir wollen gleich `unem75` als Kontrollvariable in die Regression hineinnehmen. 
 Schreiben Sie "kleiner" oder "groesser".
 
 ```{r "2_d_2"}
-
-# enter your code here ...
-
+"kleiner"
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
 Regressieren Sie nun `unem78` auf `train` und `unem75`. Speichern Sie das Ergebnis in der Variablen `reg2`. Zeigen Sie danach das Ergebnis von `reg1` und `reg2` nebeneinander mit `stargazer`.
 
 ```{r "2_d_3"}
-
-# enter your code here ...
-
+reg2 <- lm(unem78 ~ train + unem75, data=jtrain3)
+stargazer(reg1, reg2)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
@@ -466,17 +438,16 @@ Erstellen Sie zwei Datensaetze aus `jtrain3`:
 `jtrain3_la` soll alle Personen beinhalten, die 1975 arbeitslos waren, und `jtrain3_ka` alle anderen.
 
 ```{r "2_e"}
-
-# enter your code here ...
-
+jtrain3_la <- filter(jtrain3, unem75 == 1)
+jtrain3_ka <- filter(jtrain3, unem75 == 0)
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
 Lassen Sie nun die einfache Regression von `unem78` auf `train` (ohne `unem75`) fuer beide Datensaetze (`jtrain3_la` und `jtrain3_ka`) laufen. Speichern Sie die Ergebnisse in den Variablen `reg_la` und `reg_ka` ab. Zeigen Sie danach `reg1`, `reg2`, `reg_la` und `reg_ka` nebeneinander mit `stargazer`.
 
 ```{r "2_e_2"}
-
-# enter your code here ...
+reg_la <- lm(unem78 ~ train, data=jtrain3_la)
+reg_ka <- lm(unem78 ~ train, data=jtrain3_ka)
 
 stargazer(reg1, reg2, reg_la, reg_ka,type="text",keep.stat=c("n"), column.labels = c("alle","alle", "Lang Alo","Kurz Alo") )
 ```
@@ -528,9 +499,7 @@ Betrachten Sie folgendes Design fuer ein randomisiertes Experiment:
 Meinen Sie dieses Design loest die meisten relevanten Selektionsproblem und erlaubt es kausale Effekte von Weiterbildung zu schaetzen? Antworten Sie "ja" oder "nein".
 
 ```{r "2_f_2"}
-
-# enter your code here ...
-
+"nein"
 ```
 Hier waere ein guter Zeitpunkt das Addin 'Check Problemset' auszufuehren!
 
